<resources>
    <string name="app_name">ComerciosCR</string>


    <string name="inicio_lbl">Inicio</string>
    <string name="email_lbl">Email</string>
    <string name="user_lbl">Usuario</string>
    <string name="empresa_lbl">Empresa</string>
    <string name="descripcion_lbl">Descripción</string>
    <string name="olvido_lbl">Olvido su contraseña?</string>
    <string name="pwd_lbl">Contraseña</string>
    <string name="confPWD_lbl">Confirmar contraseña</string>
    <string name="ingresar_btn">Ingresar</string>
    <string name="registro_lbl">Registrarse</string>

    <string name="fecNac_lbl">Fecha de nacimiento</string>
    <string name="anio_lbl">Año</string>
    <string name="mes_lbl">Mes</string>
    <string name="dia_lbl">Día</string>

    <string name="registrar_btn">Registrarme</string>

    <string name="categoria_lbl">Categoria</string>
    <string name="ubicacion_lbl">Ubicación</string>
    <string name="telefono_lbl">Número de telefono</string>
    <string name="codigoArea_lbl">Código de área</string>

    <string name="registrarAdmin_lbl">Agregar administrador</string>
    <string name="verificarComercios_lbl">Verificar comercios</string>
    <string name="adminUsuarios_lbl">Gestionar usuarios</string>
    <string name="adminComercios_lbl">Gestionar comercios</string>
    <string name="adminAdmin_lbl">Gestionar administradores</string>

    <string name="infoGeneral_lbl">Información general</string>
    <string name="acercade_lbl">Acerca de</string>
    <string name="cerrarSesion_lbl">Cerrar sesión</string>

    <string name="actualizar_lbl">Actualizar</string>

    <string name="buscarComercios_lbl">Buscar Comercios</string>
    <string name="todosComercios_lbl">Todos los Comercios</string>
    <string name="mapa_lbl">Mapa</string>

    <string name="campoObligatorio_lbl">Campo obligatorio</string>
    <string name="actInfoUsuario_lbl">Cuenta</string>

    <string name="nombreSeccion">Nombre de la sección</string>
    <string name="registrarSeccion">Registrar sección</string>
    <string name="registrarProd">Registrar producto</string>
    <string name="elegirImg">Agregar imagen</string>
    <string name="elimImg">Eliminar</string>
    <string name="cambImg">Cambiar</string>

    <string name="catalogo_lbl">Catalogo</string>
    <string name="productos_lbl">Productos</string>
    <string name="agregar_lbl">Agregar</string>
    <string name="modificar_lbl">Modificar</string>
    <string name="eliminar_lbl">Eliminar</string>
    <string name="desactivar_lbl">Desactivar</string>

    <string name="modificarNombre_btn">Modificar nombre</string>
    <string name="nombre_lbl">Nombre</string>
    <string name="secElminar_btn">Eliminar Sección</string>
    <string name="precio_lbl">Precio</string>
    <string name="escogerCatg">Escoger categoria</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
