<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/usuarioInicio"
            android:icon="@drawable/home"
            android:title="@string/inicio_lbl" />

    </group>
    <group android:checkableBehavior="single">
    <item android:title="@string/buscarComercios_lbl">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/usuarioMapa"
                    android:icon="@drawable/map_marked_alt"
                    android:title="@string/mapa_lbl" />
                <item
                    android:id="@+id/usuarioTodosComercios"
                    android:icon="@drawable/list_ul"
                    android:title="@string/todosComercios_lbl" />
            </group>
        </menu>
    </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/infoGeneral_lbl">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/usuarioActInformacion"
                        android:icon="@drawable/user_edit"
                        android:title="@string/actInfoUsuario_lbl" />

                    <item
                        android:id="@+id/usuarioEstandarcerrarSeion"
                        android:icon="@drawable/door_open"
                        android:title="@string/cerrarSesion_lbl" />
                    <item
                        android:id="@+id/acercaDe"
                        android:icon="@drawable/address_card"
                        android:title="@string/acercade_lbl" />
                </group>
            </menu>
        </item>
    </group>
</menu>
