<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/adminRegistrar"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/registrarAdmin_lbl" />
        <item
            android:id="@+id/adminUsuarios"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/adminUsuarios_lbl" />
        <item
            android:id="@+id/adminComercios"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/adminComercios_lbl" />
    </group>

    <item android:title="@string/infoGeneral_lbl">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/cerrarSesion_lbl" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/acercade_lbl" />
        </menu>
    </item>

</menu>
