<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera2"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/inicio_lbl" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/catalogo_lbl">
            <menu>
                <item
                    android:id="@+id/navComercios_agregar_catalogo"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/agregar_lbl" />
                <item
                    android:id="@+id/navComercios_modificar_catalogo"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/modificar_lbl" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/productos_lbl">
            <menu>
                <item
                    android:id="@+id/navComercios_agregar_producto"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/agregar_lbl" />
                <item
                    android:id="@+id/navComercios_modificar_producto"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/modificar_lbl" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/infoGeneral_lbl">
            <menu>
                <item
                    android:id="@+id/navComercios_cuenta"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/actInfoUsuario_lbl" />
                <item
                    android:id="@+id/navComercios_cerrar"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/cerrarSesion_lbl" />
                <item
                    android:id="@+id/navComercios_acerca"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/acercade_lbl" />
            </menu>
        </item>
    </group>
</menu>
